--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Homepage: http://www.tuxera.com/community/ntfs-3g-advanced/
 
 Package: ntfs-3g
 Section: otherosfs
-Architecture: any kfreebsd-any
+Architecture: any
 Pre-Depends: multiarch-support, fuse [linux-any], fuse4bsd [kfreebsd-any]
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Provides: ${ntfs-3g:Provides}
@@ -21,7 +21,7 @@ Description: read/write NTFS driver for FUSE
 Package: ntfs-3g-dbg
 Section: debug
 Priority: extra
-Architecture: any kfreebsd-any
+Architecture: any
 Depends:
  ${misc:Depends}, ntfs-3g (= ${binary:Version}),
  ntfs-3g-dev (= ${binary:Version})
@@ -33,7 +33,7 @@ Description: read/write NTFS driver for FUSE (debug)
 
 Package: ntfs-3g-dev
 Section: libdevel
-Architecture: any kfreebsd-any
+Architecture: any
 Depends: ${misc:Depends}, ntfs-3g (= ${binary:Version})
 Description: read/write NTFS driver for FUSE (development)
  NTFS-3G uses FUSE (Filesystem in Userspace) to provide support for the NTFS
