--- a/debian/rules
+++ b/debian/rules
@@ -1,4 +1,8 @@
 #!/usr/bin/make -f
+# -*- makefile -*-
+
+# Uncomment this to turn on verbose mode.
+#export DH_VERBOSE=1
 
 SHELL := sh -e
 
@@ -17,10 +21,10 @@ upstream:
 	lynx -dump http://jp-andre.pagesperso-orange.fr/changelog.html > debian/local/changelog
 
 %:
-	dh ${@} --with autotools_dev
+	dh ${@} --parallel --with autoreconf
 
 override_dh_auto_configure:
-	dh_auto_configure -- --exec-prefix=/ --enable-crypto --enable-extras --enable-xattr-mappings --disable-ldconfig --with-fuse=external $(CONFIGURE_FLAGS)
+	dh_auto_configure -- --exec-prefix=/ --enable-crypto --enable-extras --enable-xattr-mappings --enable-quarantined --disable-ldconfig --with-fuse=internal $(CONFIGURE_FLAGS)
 
 override_dh_auto_install:
 	dh_auto_install
@@ -73,6 +77,12 @@ override_dh_auto_install:
 	do \
 		chrpath --delete debian/tmp/$${_PROGRAM}; \
 	done
+
+	# moving undocumented programs to ntfs-3g-dev
+	mkdir -p debian/ntfs-3g-dev/usr/bin
+	mv debian/tmp/bin/ntfsdump_logfile debian/ntfs-3g-dev/usr/bin
+	mv debian/tmp/bin/ntfsmftalloc debian/ntfs-3g-dev/usr/bin
+	mv debian/tmp/bin/ntfsck debian/ntfs-3g-dev/usr/bin
 
 override_dh_builddeb:
 	dh_builddeb -- -Zxz
