--- a/debian/control
+++ b/debian/control
@@ -21,8 +21,8 @@ Section: otherosfs
 Architecture: any 
 Pre-Depends:
  multiarch-support,
- fuse,
- fuse4bsd,
+ fuse [linux-any],
+ fuse4bsd [kfreebsd-any],
 Depends:
  ${misc:Depends},
  ${shlibs:Depends},
